[FEAT] Add new exercises

--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Hello, prog-101-practice!</h1>
-    <p>Check the console for TypeScript output.</p>
+    <header>
+      <h1 class="header__h1">Hello, prog-101-practice!</h1>
+      <p class="header__p">Check the console for TypeScript output.</p>
+      <nav class="header__nav">
+        <a class="header__a" href="/" class="logo">
+          <img src="" alt="" loading="lazy" />
+        </a>
+        <ul class="menu">
+          <li class="menu__li">
+            <a class="menu__a" href="/html/bem-example.html">BEM CSS Example</a>
+          </li>
+          <li class="menu__li">
+            <a class="menu__a" href="/html/km-to-miles.html"
+              >Km to Miles Conversor</a
+            >
+          </li>
+          <li class="menu__li"><a href=""></a></li>
+        </ul>
+      </nav>
+    </header>
 
     <script type="module" src="dist/main.js"></script>
   </body>
