--- a/html/km-to-miles.html
+++ b/html/km-to-miles.html
@@ -22,13 +22,12 @@
         class="form"
         aria-label="Formulario de conversión de distancias"
       >
-        <div class="form__div">
+        <div class="form__content">
           <label for="kmInput" class="form__label">Kilómetros</label>
           <input
             id="kmInput"
             class="form__input"
             type="number"
-            min="0"
             step="0.1"
             placeholder="Ingresa la distancia"
             aria-describedby="conversionInfo"
@@ -41,10 +40,6 @@
         <button type="submit" class="form__button">Convertir a Millas</button>
       </form>
 
-      <small id="conversionInfo" class="main__small">
-        1 kilómetro = 0.621371 millas
-      </small>
-
       <div
         class="main__result"
         id="resultOutput"
@@ -52,6 +47,10 @@
         aria-live="polite"
         aria-label="Resultado de la conversión"
       ></div>
+
+      <small id="conversionInfo" class="main__conv-rate">
+        1 kilómetro = 0.621371 millas
+      </small>
     </main>
 
     <script src="/dist/km-to.miles.js"></script>
