[FEAT] Add botton return to home

--- a/html/area-triangle-calculator.html
+++ b/html/area-triangle-calculator.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/area-triangle-calculator.css" />
     <title>Calculadora de área de triángulo</title>
   </head>
   <body>
     <header class="header">
+      <a class="header__return-home" href="/">Return home</a>
       <h1>Calculadora de área de triángulo</h1>
     </header>
 
